test/constBlockConsuming3.slq
// args: --run

def foo(x:ğ”¹)mfree{
	y:=H(x);
	if y{
		return y; /// error
	}else{
		return 0;
	}
}

def main()â‡’foo(0);
